@@ -984,7 +984,7 @@ int postMessage(const uint8_t command[], uint8_t response[])
   memset(msg, 0x00, sizeof(msg));
   memcpy(msg, &command[4], command[3]);
 
-  uint8_t result = azureiot::post_message(msg);
+  uint8_t result = azureiothub::post_message(msg);
 
   response[2] = 1; // number of parameters
   response[3] = 1; // parameter 1 length
