@@ -1,7 +1,7 @@
 #ifndef AZUREIOTHUB_H
 #define AZUREIOTHUB_H
 
-namespace azureiot {
+namespace azureiothub {
     uint8_t init();
     uint8_t post_message(const char* payload);
     uint8_t do_work();
