@@ -1,3 +1,7 @@
+Adafruit's Arduino NINA-W102 firmware 1.4.0 - 2019.04.24
+
+* Support for post_message feature
+
 Adafruit's Arduino NINA-W102 firmware 1.3.1 - 2019.04.24
 
 * Updated README.md to indicate this is Adafruit's fork
